WebCore:

2009-05-28  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=8736

        Tests: fast/borders/border-radius-constraints.html
               fast/borders/border-radius-split-inline.html

        When the sum of the corner radii on a side exceed the length of the side,
        reduce the radii according to CSS 3 rules.

        Add RenderStyle::getBorderRadiiForRect() to fetch corner radii, applying
        the constraints. Use that for painting borders, box-shadow, clipping replaced
        elements

        * platform/graphics/IntSize.h:
        (WebCore::IntSize::scale):
        Add a scale method that scales by a float (using C rounding rules, like IntRect::scale()).

        * platform/graphics/Path.cpp:
        Make the QUARTER const static.

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::pushContentsClip):
        Use getBorderRadiiForRect to fetch border radii.

        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::paintFillLayerExtended):
        Use getBorderRadiiForRect to fetch border radii.

        (WebCore::RenderBoxModelObject::paintBorder):
        Use getBorderRadiiForRect to fetch border radii, and fix a bug when drawing
        borders for split inlines, which used to apply the radii for each segment,
        and no longer does.

        (WebCore::RenderBoxModelObject::paintBoxShadow):
        Use getBorderRadiiForRect to fetch border radii.

        * rendering/RenderReplaced.cpp:
        (WebCore::RenderReplaced::paint):
        Use getBorderRadiiForRect to fetch border radii for clipping.

        * rendering/RenderWidget.cpp:
        (WebCore::RenderWidget::paint):
        Use getBorderRadiiForRect to fetch border radii for clipping.

        * rendering/style/RenderStyle.h:
        * rendering/style/RenderStyle.cpp:
        (WebCore::RenderStyle::getBorderRadiiForRect):
        New bottleneck method to fetch corner radiil given a rect, applying the constraint
        rules.

LayoutTests:

2009-05-28  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=8736

        * fast/borders/border-radius-constraints.html: Added.
        * platform/mac/fast/borders/border-radius-constraints-expected.checksum: Added.
        * platform/mac/fast/borders/border-radius-constraints-expected.png: Added.
        * platform/mac/fast/borders/border-radius-constraints-expected.txt: Added.

        Test that corner radii are constrained according to CSS3 rules.

        * fast/borders/border-radius-huge-assert.html:
        * platform/mac/fast/borders/border-radius-huge-assert-expected.checksum:
        * platform/mac/fast/borders/border-radius-huge-assert-expected.png:
        * platform/mac/fast/borders/border-radius-huge-assert-expected.txt:

        Now that we constrain border-radius, update the text of the test, and the
        expected result.

        * fast/borders/border-radius-split-inline.html: Added.
        * platform/mac/fast/borders/border-radius-split-inline-expected.checksum: Added.
        * platform/mac/fast/borders/border-radius-split-inline-expected.png: Added.
        * platform/mac/fast/borders/border-radius-split-inline-expected.txt: Added.

        New test for border-radius on a split inline.

        * fast/box-shadow/border-radius-big.html:
        * platform/mac/fast/box-shadow/border-radius-big-expected.checksum:
        * platform/mac/fast/box-shadow/border-radius-big-expected.png:
        * platform/mac/fast/box-shadow/border-radius-big-expected.txt:

        Now that we constrain border-radius, update the text of the test, and the
        expected result.



Canonical link: https://commits.webkit.org/36081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44235 268f45cc-cd09-0410-ab3c-d52691b4dbfc